--- a/Stats.Web/Components/Pages/Charts.razor
+++ b/Stats.Web/Components/Pages/Charts.razor
@@ -1,4 +1,5 @@
 ﻿@page "/charts"
+@using Stats.Domain
 @attribute [StreamRendering(true)]
 @rendermode InteractiveServer
 
@@ -24,21 +25,47 @@
   }
 </script>
 
-<form method="post" EditContext="editContext" @onsubmit="Submit" @formname="chart-form">
-    @* <CustomValidation @ref="customValidation" />
-    <ValidationSummary /> *@
-    <AntiforgeryToken />
+<EditForm Model="Model" OnValidSubmit="@OnValidSubmit">
+    <DataAnnotationsValidator />
     <div>
-        <label>
-            Guild Name:
-            <InputText @bind-Value="Model!.GuildName" />
-        </label>
+        Region:
+        <InputSelect @bind-Value="Model!.Region" disabled="@(RequestPending)">
+            <option value="">
+                Select instance ...
+            </option>
+            <option checked="@(Model!.Region.ToString() == Region.US.ToString())"
+                value="US">
+                US
+            </option>
+        </InputSelect>
+        <ValidationMessage For="@(() => Model.Region)" />
     </div>
     <div>
         <label>
             Realm:
             <InputText @bind-Value="Model!.RealmName" />
         </label>
+        <ValidationMessage For="@(() => Model.RealmName)" />
+    </div>
+    <div>
+        <label>
+            Guild Name:
+            <InputText @bind-Value="Model!.GuildName" />
+        </label>
+        <ValidationMessage For="@(() => Model.GuildName)" />
+    </div>
+    <div>
+        Raid instance:
+        <InputSelect @bind-Value="Model!.Zone">
+            <option value="">
+                Select instance ...
+            </option>
+            <option checked="@(Model!.Zone.ToString() == "Nerub'ar Palace")"
+                value="NerubarPalace">
+                Nerub'ar Palace
+            </option>
+        <ValidationMessage For="@(() => Model.Zone)" />
+        </InputSelect>
     </div>
     @* <div>
         <label>
@@ -47,26 +74,48 @@
         </label>
     </div>         *@
     <div>
-        <button type="submit">Submit</button>
+        <button type="submit" disabled="@(!context.Validate() || RequestPending)">Submit</button>
     </div>
-</form>
+    <div>@DisplayMessage</div>
+</EditForm>
 
 
 @code {
-    @* private CustomValidation? customValidation; *@
+    string DisplayMessage = string.Empty;
+
+    bool RequestPending { get; set; }
 
     [SupplyParameterFromForm]
-    ChartArgs? Model { get; set; }
+    GuildReportRequest? Model { get; set; }
 
-    protected override void OnInitialized() => Model ??= new() { GuildName = "Resus", RealmName = "Frostmourne" };
+    protected override void OnInitialized() => Model ??= new() {
+        GuildName = "Resus",
+        RealmName = "Frostmourne",
+        Region = Region.US,
+        Zone = Zone.NerubarPalace,
+        FileType = FileType.CSV,
+    };
 
-    private async void Submit()
+    private async void OnValidSubmit()
     {
-        var fileStream = await StatsApi.GetChartAsync(Model!);
 
-        using var streamRef = new DotNetStreamReference(stream: fileStream);
 
-        await JS.InvokeVoidAsync("downloadFileFromStream", $"{Model!.GuildName}-{Model!.RealmName}.csv", streamRef);
+        try {
+            RequestPending = true;
+            DisplayMessage = "Generating chart...";
+            StateHasChanged();
+            var fileStream = await StatsApi.GetChartAsync(Model!);
+            using var streamRef = new DotNetStreamReference(stream: fileStream);
+            await JS.InvokeVoidAsync("downloadFileFromStream", $"{Model!.GuildName}-{Model!.RealmName}.csv", streamRef);
+            DisplayMessage = string.Empty;
+        }
+        catch (Exception ex) {
+            DisplayMessage = $"Error: {ex.Message}";
+        }
+        finally {
+            RequestPending = false;
+            StateHasChanged();
+        }
     }
 
     @* private void Submit()
