--- a/Stats.Web/Components/Pages/Charts.razor
+++ b/Stats.Web/Components/Pages/Charts.razor
@@ -1,7 +1,7 @@
 @page "/charts"
 @using Stats.Domain
-@attribute [StreamRendering(true)]
-@rendermode InteractiveServer
+@* @attribute [StreamRendering(true)] *@
+@* @rendermode InteractiveServer *@
 
 @inject StatsApiClient StatsApi
 @inject IJSRuntime JS
@@ -78,41 +78,21 @@
     <div>@DisplayMessage</div>
 </EditForm>
 
-@foreach (var data in Datas)
+
+@foreach (var chart in ChartDatas)
 {
-    <ApexChart TItem="DataPoint" Title="@(data.Key)" Options="@(ChartOptions[data.Key])">
-
-        @*    <ApexPointSeries TItem="DataPoint"
-                            Items="@(DataPoints)"
-                            Name="@(Model.GuildName)"
-                            SeriesType="SeriesType.Line"
-                            XValue="e => e.Time"
-                            YValue="e=> e.Value"
-                            /> *@
-
-        @foreach (var series in data.Value!.Series)
-        {
-            <ApexPointSeries TItem="DataPoint"
-            Items="@(series.Value)"
-            Name="@(series.Key)"
-            SeriesType="SeriesType.Line"
-            XValue="e => e.Time"
-            YValue="e=> e.Value"
-            />
-        }
-    </ApexChart>
+    <RaidVelocityChart GuildName="@(chart.GuildName)" RealmName="@(chart.RealmName)" Data="@(chart.Data)" />
 }
 
 @code {
-
-    Dictionary<string, ChartData?> Datas { get; set; } = new();
-    Dictionary<string, ApexChartOptions<DataPoint>?> ChartOptions { get; set; } = new();
+    List<(string GuildName, string RealmName, ChartData Data)> ChartDatas = new();
     string DisplayMessage = string.Empty;
     bool RequestPending;
     bool ChartDisplayed;
 
     [SupplyParameterFromForm]
     GuildReportRequest? Model { get; set; }
+
     protected override void OnInitialized()
     {
         Model ??= new() {
@@ -134,26 +114,9 @@
             StateHasChanged();
 
             var result = await StatsApi.GetGuildReportChartDataAsync(Model!);
-
-            string key = $"{Model!.GuildName}-{Model!.RealmName}";
             if (result.Value is not null) {
-                Datas.Add(key, result.Value);
 
-                var options = new ApexChartOptions<DataPoint>();
-                options.Chart.Width = 900;
-                options.Chart.Height = 500;
-                options.Stroke = new Stroke() {
-                    Width = 2
-                };
-                options.Chart.Group = "reports";
-
-                @* var range = DateTime.Now.ToUnixTimeMilliseconds()
-                        - DateTime.Parse("2024-10-24").ToUnixTimeMilliseconds(); *@
-
-                options.Xaxis = new XAxis() {
-                    Type = XAxisType.Datetime,
-                };
-                ChartOptions.Add(key, options);
+                ChartDatas.Add((Model!.GuildName, Model!.RealmName, result.Value));
                 DisplayMessage = string.Empty;
                 ChartDisplayed = true;
             }
