Fix game zone loading.

--- a/Stats.Web/Components/Pages/Home.razor
+++ b/Stats.Web/Components/Pages/Home.razor
@@ -18,7 +18,7 @@
 @code {
     Dictionary<string, ChartDataResponse>? GuildData;
 
-    string Message = "Loading charts (this may take upto 60 seconds)...";
+    string Message = "Loading charts (this may take a minute...)";
 
     protected async override Task OnInitializedAsync()
     {
